# evo-image-filter-cpp

./: .gitignore  CMakeLists.txt  conandata.yml  run.sh
include/: ImageOps.h  Parallelizer.h  Shaper.h  StepSorter.h  Timestamper.h  Types.h  Util.h
src/: ImageOps.cpp  Main.cpp  Shaper.cpp  Util.cpp
